--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -1055,7 +1055,7 @@ input[type=checkbox]:checked + .customLabel:before {
     margin-bottom: 15px;
     font-weight: normal;
     max-height: 26px;
-    overflow: hidden;
+    min-height: 26px;
     line-height: 13px; }
     .content .post .post-des h6 a {
       color: #444444 !important;
